syntax = "proto3";

option csharp_namespace = "Consistency";

package Consensus;

service DistributedLock {
  rpc NextAcquire (RpcIntentionLock) returns (Result);

  rpc Release (RpcIntentionLock) returns (google.protobuf.Empty);

  rpc EnsureTransactionCreated (RpcIntentionLock) returns (google.protobuf.Empty);
}

message RpcIntentionLock {
  string TransactionId = 1;
  int32 Intent = 2;
  string TypeName = 3;
  repeated string KeysToLock = 4;
}

message Result {
  bool Success = 1;
}